# cv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  cv.md  index.html  prompts.md  pyproject.toml  sitemap.xml
src/cvcompiler/: __init__.py  favicon.py  generator.py  markdown.py  models.py  parser.py  sitemap.py  themes.py
src/cvcompiler/templates/: base.html  certifications.html  contact.html  education.html  experience.html  languages.html  nav.html  profile.html  scripts.js  skills.html  styles.css
themes/: dark_purple.json  vivid.json
